<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MiniMatchMaker</string>
    <string name="start_message">Mini match maker demo\n\nTry to change environmental values and send them to the Mini match maker.</string>
    <string name="menu_settings">Settings</string>
    <string name="button_send">Send</string>
    <string name="button_upbrightness">Brightness up</string>
    <string name="button_downbrightness">Brightness down</string>
<string name="button_upnoise">Noise up</string>
    <string name="button_downnoise">Noise down</string>
</resources>